--- a/index.html
+++ b/index.html
@@ -266,164 +266,252 @@ function showNotificationAndForm() {
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>نموذج تسجيل جامعة الملك فيصل</title>
+<title>نموذج التسجيل _جامعة الملك فيصل</title>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;800&display=swap" rel="stylesheet">
 <style>
-body { margin:0; font-family:"Cairo","Segoe UI",Tahoma,sans-serif; background-color:#f4f7f6; }
-.container { max-width:1100px; margin:50px auto; background:#fff; border-radius:12px; box-shadow:0 8px 25px rgba(0,0,0,0.1); padding:40px 60px; }
-h2 { text-align:center; color:#0b6b44; font-size:28px; margin-bottom:5px; }
-p { text-align:center; color:#555; margin-bottom:30px; font-size:15px; }
-.grid2 { display:grid; grid-template-columns:1fr 1fr; gap:35px; }
-label { display:block; margin-bottom:6px; font-weight:600; color:#0b6b44; font-size:15px; }
-input, select, textarea { width:100%; padding:14px; border-radius:10px; border:1px solid #ccc; box-sizing:border-box; margin-bottom:20px; font-size:15px; background-color:#fafafa; transition:0.3s; }
-input:focus, select:focus, textarea:focus { border:1px solid #0b6b44; box-shadow:0 0 5px rgba(11,107,68,0.3); outline:none; }
-textarea { resize:vertical; min-height:90px; }
-.account-section { display:flex; justify-content:space-between; align-items:center; background:#f9faf9; padding:15px 20px; border:1px solid #e2e2e2; border-radius:10px; margin:25px 0; }
-.account-section span { color:#0b6b44; font-weight:700; font-size:15px; }
-button { background-color:#0b6b44; color:#fff; border:none; padding:12px 26px; border-radius:10px; font-size:16px; cursor:pointer; font-weight:600; transition:0.3s; }
-button:hover { background-color:#095c3c; }
-#cancelFormBtn { background-color:#aaa; color:#fff; }
-.submit-area { text-align:center; margin-top:25px; }
+:root{
+  --uf-green:#0b6b44;
+  --gold:#d4af37;
+  --bg:#f5f6f8;
+  --card:#ffffff;
+  --muted:#6b6b6b;
+}
+*{box-sizing:border-box;}
+body{
+  margin:0;
+  font-family:"Cairo", "Segoe UI", Tahoma, sans-serif;
+  background:var(--bg);
+  color:#222;
+  direction:rtl;
+}
+.container{
+  max-width:1150px;
+  margin:34px auto;
+  background:var(--card);
+  border-radius:14px;
+  box-shadow:0 10px 30px rgba(0,0,0,0.08);
+  padding:36px 48px 48px 48px;
+  border-top:6px solid var(--uf-green);
+}
+header{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  gap:16px;
+  margin-bottom:16px;
+}
+.brand{display:flex;align-items:center;gap:14px;}
+.logo{
+  width:72px;height:72px;border-radius:10px;
+  background:linear-gradient(135deg,var(--uf-green),#064b33);
+  display:flex;align-items:center;justify-content:center;
+  color:#fff;font-weight:800;font-size:18px;
+  box-shadow:0 4px 14px rgba(11,107,68,0.15) inset;
+}
+h1{margin:0;font-size:20px;color:var(--uf-green);font-weight:800;}
+.subtitle{margin:0;color:var(--muted);font-size:14px;}
+.grid2{display:grid;grid-template-columns:1fr 1fr;gap:28px 36px;margin-top:20px;}
+label{display:block;font-weight:600;color:var(--uf-green);margin-bottom:8px;font-size:15px;}
+input[type="text"], input[type="email"], input[type="number"], input[type="tel"], input[type="date"], select, textarea{
+  width:100%;padding:14px 12px;border-radius:10px;border:1px solid #dcdcdc;background:#fbfbfb;font-size:15px;transition:box-shadow .18s, border-color .18s;
+}
+input:focus, select:focus, textarea:focus{outline:none;border-color:var(--uf-green);box-shadow:0 0 8px rgba(11,107,68,0.12);}
+textarea{min-height:96px; resize:vertical;}
+.section-title{margin-top:26px;margin-bottom:8px;font-weight:700;color:#444;border-bottom:1px dashed #eee;padding-bottom:10px;}
+.files-row{display:grid;grid-template-columns:1fr 1fr;gap:12px;}
+.account-section{display:flex;align-items:center;justify-content:space-between;gap:12px;background:#fbfbfb;padding:14px;border-radius:10px;border:1px solid #efecec;margin-top:20px;}
+.account-left{display:flex;align-items:center;gap:12px;}
+.copy-btn{background:var(--gold);color:#fff;border:none;padding:10px 16px;border-radius:8px;cursor:pointer;font-weight:700;box-shadow:0 6px 18px rgba(212,175,55,0.12);}
+.copy-btn:active{transform:translateY(1px)}
+.fees{font-weight:800;color:var(--uf-green);font-size:15px;}
+.bank-name{color:#333;font-weight:600;font-size:14px;}
+.submit-area{text-align:center;margin-top:26px;display:flex;justify-content:center;gap:12px;}
+.btn{background:var(--uf-green);color:#fff;border:none;padding:12px 36px;border-radius:10px;font-weight:700;cursor:pointer;font-size:16px;}
+.btn.cancel{background:#9e9e9e;}
+.note{text-align:center;color:#888;font-size:13px;margin-top:12px;}
+@media (max-width:900px){.grid2{grid-template-columns:1fr;}.files-row{grid-template-columns:1fr;} header{flex-direction:column;align-items:flex-start;gap:10px}}
 </style>
 </head>
 <body>
 
-<div class="container">
-
-  <!-- النموذج مخفي افتراضياً -->
-  <div id="registrationForm" style="display:none;">
-    <h2>نموذج التسجيل - جامعة الملك فيصل</h2>
-    <p>يرجى تعبئة جميع الحقول المطلوبة بدقة قبل الإرسال.</p>
-
-    <form action="https://formspree.io/f/meordlav" method="POST" enctype="multipart/form-data">
-      <div class="grid2">
-
-        <!-- العمود الأول -->
-        <div>
-          <label>الاسم الكامل (رباعي) *</label>
-          <input type="text" name="fullName" required>
-
-          <label>الجنس *</label>
-          <select name="gender" required>
-            <option value="">اختر...</option>
-            <option>ذكر</option>
-            <option>أنثى</option>
-          </select>
-
-          <label>الجنسية *</label>
-          <select name="nationality" required>
-            <option value="">اختر الجنسية</option>
-            <option>السعودية</option><option>اليمن</option><option>مصر</option>
-            <option>الإمارات</option><option>الأردن</option><option>الكويت</option>
-            <option>عُمان</option><option>قطر</option><option>البحرين</option>
-            <option>ليبيا</option><option>تونس</option><option>الجزائر</option>
-            <option>المغرب</option><option>سوريا</option><option>العراق</option>
-            <option>فلسطين</option><option>لبنان</option><option>السودان</option>
-            <option>موريتانيا</option>
-          </select>
-
-          <label>تاريخ الميلاد *</label>
-          <input type="date" name="birthDate" required>
-
-          <label>رقم الهوية / الإقامة *</label>
-          <input type="text" name="idNumber" required>
-
-          <label>نوع المؤهل السابق *</label>
-          <select name="prevDegree" required>
-            <option>ثانوي</option><option>دبلوم</option><option>بكالوريوس</option><option>ماجستير</option>
-          </select>
-
-          <label>سنة التخرج *</label>
-          <input type="number" name="gradYear" min="1900" max="2100" required>
-
-          <label>اسم المدرسة / الجامعة السابقة</label>
-          <input type="text" name="prevInstitute">
-
-          <label>النسبة / المعدل</label>
-          <input type="text" name="gpa">
-
-          <label>صورة الهوية / الإقامة *</label>
-          <input type="file" name="fileId" accept="image/*,application/pdf" required>
-
-          <label>صورة الشهادة *</label>
-          <input type="file" name="fileCertificate" accept="image/*,application/pdf" required>
-        </div>
-
-        <!-- العمود الثاني -->
-        <div>
-          <label>رقم الجوال *</label>
-          <input type="text" name="phone" required>
-
-          <label>البريد الإلكتروني *</label>
-          <input type="email" name="email" required>
-
-          <label>المدينة *</label>
-          <input type="text" name="city" required>
-
-          <label>العنوان بالتفصيل *</label>
-          <textarea name="address" required></textarea>
-
-          <label>التخصص المطلوب *</label>
-          <input type="text" name="desiredMajor" required>
-
-          <label>نوع الدراسة *</label>
-          <select name="studyType" required>
-            <option>انتظام</option><option>انتساب</option><option>تعليم عن بعد</option>
-          </select>
-
-          <label>الكلية / القسم *</label>
-          <select name="faculty" required>
-            <option value="">اختر الكلية</option>
-            <option>كلية الطب</option><option>كلية الهندسة</option>
-            <option>كلية العلوم</option><option>كلية الآداب</option>
-            <option>كلية إدارة الأعمال</option><option>كلية الحاسبات</option>
-          </select>
-
-          <label>صورة شخصية *</label>
-          <input type="file" name="filePhoto" accept="image/*" required>
-
-          <label>إيصال الدفع</label>
-          <input type="file" name="fileReceipt" accept="image/*,application/pdf">
-        </div>
-
-      </div>
-
-      <div class="account-section">
-        <button type="button" onclick="navigator.clipboard.writeText('SA9080000999999012345678'); alert('✅ تم نسخ رقم الحساب بنجاح');">نسخ رقم الحساب</button>
-        <span>رسوم التسجيل: 1200 ريال - البنك الأهلي السعودي</span>
-      </div>
-
-      <div>
-        <label><input type="checkbox" name="agree" required> أقر بأن جميع البيانات المدخلة صحيحة ومطابقة للوثائق الرسمية.</label>
-      </div>
-
-      <div class="submit-area">
-        <button type="submit">إرسال الطلب</button>
-        <button type="reset" id="cancelFormBtn">إلغاء</button>
-      </div>
-    </form>
+<header>
+  <div class="brand">
+    <div class="logo">FKU</div>
+    <div>
+      <h1>نموذج التسجيل _جامعة الملك فيصل</h1>
+      <p class="subtitle">يرجى تعبئة جميع الحقول بدقة وإرفاق الملفات المطلوبة قبل الإرسال.</p>
+    </div>
   </div>
+  <div style="text-align:left">
+    <div class="bank-name">رقم الحساب للتحويل</div>
+    <div style="font-weight:800;color:var(--uf-green);">SA9080000999999012345678</div>
+    <div style="font-size:13px;color:#666;margin-top:6px">البنك الأهلي السعودي — رسوم التسجيل: <span style="font-weight:800;color:#000">1200 ريال</span></div>
+  </div>
+</header>
+
+<!-- زر تقديم الطلب موجود عندك -->
+<!-- النموذج مخفي بشكل افتراضي -->
+<div class="container">
+<form id="registrationForm" action="https://formspree.io/f/meordlav" method="POST" enctype="multipart/form-data" style="display:none;" novalidate>
+  <div class="grid2">
+    <div>
+      <label>الاسم الكامل (رباعي) *</label>
+      <input type="text" name="fullName" required>
+      <label>الجنس *</label>
+      <select name="gender" required>
+        <option value="">اختر...</option>
+        <option>ذكر</option>
+        <option>أنثى</option>
+      </select>
+      <label>الجنسية *</label>
+      <select name="nationality" required>
+        <option value="">اختر الجنسية</option>
+        <option>السعودية</option><option>اليمن</option><option>مصر</option><option>سوريا</option><option>الأردن</option><option>العراق</option>
+        <option>لبنان</option><option>فلسطين</option><option>السودان</option><option>تونس</option><option>المغرب</option><option>الإمارات</option>
+        <option>الكويت</option><option>البحرين</option><option>عمان</option><option>قطر</option><option>تركيا</option><option>أفغانستان</option>
+        <option>باكستان</option><option>الهند</option><option>إندونيسيا</option>
+        <option>باقية الدول - Other</option>
+      </select>
+      <label>الدولة (مكان الإقامة) *</label>
+      <select name="country" required>
+        <option value="">اختر الدولة</option>
+        <option>المملكة العربية السعودية</option><option>اليمن</option><option>مصر</option><option>الإمارات</option>
+        <option>الكويت</option><option>البحرين</option><option>عمان</option><option>قطر</option>
+        <option>الأردن</option><option>سوريا</option><option>لبنان</option><option>السودان</option>
+        <option>المغرب</option><option>تونس</option><option>أخرى</option>
+      </select>
+      <label>رقم الهوية / الإقامة *</label>
+      <input type="text" name="idNumber" required>
+      <label>تاريخ الميلاد *</label>
+      <input type="date" name="birthDate" required>
+      <label>مكان الميلاد (المدينة)</label>
+      <input type="text" name="birthPlace">
+      <label>المدينة *</label>
+      <input type="text" name="city" required>
+      <label>العنوان بالتفصيل *</label>
+      <textarea name="address" required placeholder="شارع - حي - رمز بريدي (إن وُجد)"></textarea>
+      <label>رقم الجوال (واتساب) *</label>
+      <input type="tel" name="phone" required>
+      <label>البريد الإلكتروني *</label>
+      <input type="email" name="email" required>
+    </div>
+    <div>
+      <label>نوع المؤهل السابق *</label>
+      <select name="prevDegree" required>
+        <option value="">اختر...</option><option>ثانوي</option><option>دبلوم</option><option>بكالوريوس</option><option>ماجستير</option>
+      </select>
+      <label>سنة التخرج *</label>
+      <input type="number" name="gradYear" min="1900" max="2100" required>
+      <label>اسم المدرسة / الجامعة السابقة</label>
+      <input type="text" name="prevInstitute">
+      <label>النسبة / المعدل</label>
+      <input type="text" name="gpa">
+      <label>التخصص المطلوب *</label>
+      <input type="text" name="desiredMajor" required>
+      <label>نوع الدراسة *</label>
+      <select name="studyType" required>
+        <option value="">اختر...</option>
+        <option>انتظام</option><option>انتساب</option><option>تعليم عن بعد</option>
+      </select>
+      <label>الكلية / القسم *</label>
+      <select name="faculty" required>
+        <option value="">اختر الكلية</option>
+        <option>كلية الطب</option><option>كلية الهندسة</option><option>كلية العلوم</option>
+        <option>كلية الآداب</option><option>كلية إدارة الأعمال</option><option>كلية الحاسبات وتقنية المعلومات</option>
+        <option>كلية التربية</option><option>كلية القانون</option><option>كلية الصحة العامة</option>
+      </select>
+      <label>هل لديك أي حالة طبية هامة؟ (إن وُجد)</label>
+      <input type="text" name="medicalInfo" placeholder="اكتب إذا كان هناك أمر طبي مهم">
+      <div class="section-title">جهة الاتصال في حالات الطوارئ</div>
+      <label>اسم جهة الاتصال للطوارئ</label>
+      <input type="text" name="emergencyName" placeholder="اسم قريب أو شخص">
+      <label>صلة القرابة</label>
+      <input type="text" name="emergencyRelation" placeholder="أم/ أب/ أخ/ صديق ...">
+      <label>رقم الطوارئ</label>
+      <input type="tel" name="emergencyPhone" placeholder="رقم جوال للطوارئ">
+    </div>
+  </div>
+
+  <div class="section-title">المرفقات المطلوبة</div>
+  <div class="files-row" style="margin-top:8px;">
+    <div>
+      <label>صورة الهوية / الإقامة *</label>
+      <input type="file" name="fileId" accept="image/*,application/pdf" required>
+    </div>
+    <div>
+      <label>صورة الشهادة / المؤهل *</label>
+      <input type="file" name="fileCertificate" accept="image/*,application/pdf" required>
+    </div>
+  </div>
+  <div class="files-row" style="margin-top:12px;">
+    <div>
+      <label>صورة شخصية (مقاس - واضح) *</label>
+      <input type="file" name="filePhoto" accept="image/*" required>
+    </div>
+    <div>
+      <label>إيصال الدفع (إن وُجد)</label>
+      <input type="file" name="fileReceipt" accept="image/*,application/pdf">
+    </div>
+  </div>
+
+  <div class="account-section" style="margin-top:18px">
+    <div class="account-left">
+      <div>
+        <div style="font-size:13px;color:#666">لتحويل الرسوم استخدم:</div>
+        <div style="font-weight:800;color:var(--uf-green);">SA9080000999999012345678</div>
+        <div class="bank-name">البنك الأهلي السعودي</div>
+      </div>
+    </div>
+    <div style="display:flex;align-items:center;gap:12px">
+      <div class="fees">رسوم التسجيل: 1200 ريال</div>
+      <button type="button" class="copy-btn" id="copyAccountBtn">نسخ رقم الحساب</button>
+    </div>
+  </div>
+
+  <div style="margin-top:16px">
+    <label><input type="checkbox" name="agree" required> أقرّ بأن جميع البيانات المدخلة صحيحة ومطابقة للوثائق الرسمية.</label>
+  </div>
+
+  <div class="submit-area">
+    <button type="submit" class="btn">إرسال الطلب</button>
+    <button type="reset" class="btn cancel">إلغاء</button>
+  </div>
+
+  <div class="note">جميع الحقوق محفوظة © جامعة الملك فيصل</div>
+</form>
 </div>
 
 <script>
-// فتح النموذج عند الضغط على رابطك "تقديم طلب جديد"
-function showNotificationAndForm() {
-  const formWrap = document.getElementById('registrationForm');
-  formWrap.style.display = 'block';
-  formWrap.scrollIntoView({ behavior: 'smooth' });
-}
+// نسخ رقم الحساب
+document.getElementById('copyAccountBtn').addEventListener('click', function(){
+  const text = 'SA9080000999999012345678 - البنك الأهلي السعودي';
+  if(navigator.clipboard && navigator.clipboard.writeText){
+    navigator.clipboard.writeText(text).then(()=>{alert('✅ تم نسخ رقم الحساب: ' + text);}).catch(()=>{prompt('انسخ رقم الحساب يدوياً:', text);});
+  }else{prompt('انسخ رقم الحساب يدوياً:', text);}
+});
 
 // إرسال النموذج عبر Formspree
-document.getElementById('registrationForm').addEventListener('submit', async function(e){
+document.getElementById('registrationForm').addEventListener('submit', function(e){
   e.preventDefault();
   const fd = new FormData(this);
-  try{
-    const res = await fetch(this.action, {method:'POST', body:fd, headers:{'Accept':'application/json'}});
-    if(res.ok){ alert('✅ تم إرسال الطلب بنجاح'); this.reset(); }
-    else{ alert('⚠️ لم يتم إرسال الطلب، تحقق من الاتصال أو إعداد Formspree.'); }
-  } catch(err){ alert('⚠️ حدث خطأ أثناء الإرسال'); console.error(err); }
+  fetch(this.action,{
+    method:'POST',
+    body:fd,
+    headers:{'Accept':'application/json'}
+  }).then(response=>{
+    if(response.ok){
+      alert('✅ تم إرسال الطلب بنجاح، ستصلك رسالة تأكيد على بريدك الإلكتروني.');
+      this.reset();
+      this.style.display='none';
+    }else{
+      alert('⚠️ لم يتم إرسال الطلب، تحقق من الاتصال أو إعداد Formspree.');
+    }
+  }).catch(err=>{
+    console.error(err);
+    alert('حدث خطأ أثناء الإرسال، حاول/حاولي مرة أخرى لاحقًا.');
+  });
 });
 </script>
-
 </body>
 </html>
 </body>
