--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@ body{
   font-family:"Cairo", "Segoe UI", Tahoma, sans-serif;
   color:#222;
   direction:rtl;
+  background:#ffffff;
 }
 .container{
   max-width:1150px;
@@ -290,6 +291,9 @@ body{
   box-shadow:0 10px 30px rgba(0,0,0,0.08);
   padding:36px 48px 48px 48px;
   border-top:6px solid var(--uf-green);
+  display:none;
+  position:relative;
+  z-index:1000;
 }
 header{
   display:flex;
@@ -332,8 +336,9 @@ textarea{min-height:96px; resize:vertical;}
 </head>
 <body>
 
-<!-- النموذج مخفي افتراضياً -->
-<div class="container" id="registrationForm" style="display:none;">
+<button id="showFormBtn" class="btn" style="margin:20px;">تقديم طلب جديد</button>
+
+<div class="container" id="registrationForm">
 <header>
   <div class="brand">
     <div class="logo">FKU</div>
@@ -345,192 +350,152 @@ textarea{min-height:96px; resize:vertical;}
 </header>
 
 <form action="https://formspree.io/f/meordlav" method="POST" enctype="multipart/form-data" novalidate>
-  <div class="grid2">
-    <div>
-      <label>الاسم الكامل (رباعي) *</label>
-      <input type="text" name="fullName" required>
-      <label>الجنس *</label>
-      <select name="gender" required>
-        <option value="">اختر...</option>
-        <option>ذكر</option>
-        <option>أنثى</option>
-      </select>
-      <label>الجنسية *</label>
-      <select name="nationality" required>
-        <option value="">اختر الجنسية</option>
-        <option>السعودية</option><option>اليمن</option><option>مصر</option><option>سوريا</option><option>الأردن</option><option>العراق</option>
-        <option>لبنان</option><option>فلسطين</option><option>السودان</option><option>تونس</option><option>المغرب</option><option>الإمارات</option>
-        <option>الكويت</option><option>البحرين</option><option>عمان</option><option>قطر</option><option>تركيا</option><option>أفغانستان</option>
-        <option>باكستان</option><option>الهند</option><option>إندونيسيا</option>
-        <option>باقية الدول - Other</option>
-      </select>
-      <label>الدولة (مكان الإقامة) *</label>
-      <select name="country" required>
-        <option value="">اختر الدولة</option>
-        <option>المملكة العربية السعودية</option><option>اليمن</option><option>مصر</option><option>الإمارات</option>
-        <option>الكويت</option><option>البحرين</option><option>عمان</option><option>قطر</option>
-        <option>الأردن</option><option>سوريا</option><option>لبنان</option><option>السودان</option>
-        <option>المغرب</option><option>تونس</option><option>أخرى</option>
-      </select>
-      <label>رقم الهوية / الإقامة *</label>
-      <input type="text" name="idNumber" required>
-      <label>تاريخ الميلاد *</label>
-      <input type="date" name="birthDate" required>
-      <label>مكان الميلاد (المدينة)</label>
-      <input type="text" name="birthPlace">
-      <label>المدينة *</label>
-      <input type="text" name="city" required>
-      <label>العنوان بالتفصيل *</label>
-      <textarea name="address" required placeholder="شارع - حي - رمز بريدي (إن وُجد)"></textarea>
-      <label>رقم الجوال (واتساب) *</label>
-      <input type="tel" name="phone" required>
-      <label>البريد الإلكتروني *</label>
-      <input type="email" name="email" required>
-    </div>
-    <div>
-      <label>نوع المؤهل السابق *</label>
-      <select name="prevDegree" required>
-        <option value="">اختر...</option><option>ثانوي</option><option>دبلوم</option><option>بكالوريوس</option><option>ماجستير</option>
-      </select>
-      <label>سنة التخرج *</label>
-      <input type="number" name="gradYear" min="1900" max="2100" required>
-      <label>اسم المدرسة / الجامعة السابقة</label>
-      <input type="text" name="prevInstitute">
-      <label>النسبة / المعدل</label>
-      <input type="text" name="gpa">
-      <label>التخصص المطلوب *</label>
-      <input type="text" name="desiredMajor" required>
-      <label>نوع الدراسة *</label>
-      <select name="studyType" required>
-        <option value="">اختر...</option>
-        <option>انتظام</option><option>انتساب</option><option>تعليم عن بعد</option>
-      </select>
-      <label>الكلية / القسم *</label>
-      <select name="faculty" required>
-        <option value="">اختر الكلية</option>
-        <option>كلية الطب</option><option>كلية الهندسة</option><option>كلية العلوم</option>
-        <option>كلية الآداب</option><option>كلية إدارة الأعمال</option><option>كلية الحاسبات وتقنية المعلومات</option>
-        <option>كلية التربية</option><option>كلية القانون</option><option>كلية الصحة العامة</option>
-      </select>
-      <label>هل لديك أي حالة طبية هامة؟ (إن وُجد)</label>
-      <input type="text" name="medicalInfo" placeholder="اكتب إذا كان هناك أمر طبي مهم">
+<div class="grid2">
+<div>
+<label>الاسم الكامل (رباعي) *</label>
+<input type="text" name="fullName" required>
+<label>الجنس *</label>
+<select name="gender" required>
+<option value="">اختر...</option>
+<option>ذكر</option>
+<option>أنثى</option>
+</select>
+<label>الجنسية *</label>
+<select name="nationality" required>
+<option value="">اختر الجنسية</option>
+<option>السعودية</option><option>اليمن</option><option>مصر</option><option>سوريا</option>
+<option>الأردن</option><option>العراق</option><option>لبنان</option><option>فلسطين</option>
+<option>السودان</option><option>تونس</option><option>المغرب</option><option>الإمارات</option>
+<option>الكويت</option><option>البحرين</option><option>عمان</option><option>قطر</option>
+<option>تركيا</option><option>أفغانستان</option><option>باكستان</option><option>الهند</option>
+<option>إندونيسيا</option><option>باقية الدول - Other</option>
+</select>
+<label>الدولة (مكان الإقامة) *</label>
+<select name="country" required>
+<option value="">اختر الدولة</option>
+<option>المملكة العربية السعودية</option><option>اليمن</option><option>مصر</option><option>الإمارات</option>
+<option>الكويت</option><option>البحرين</option><option>عمان</option><option>قطر</option>
+<option>الأردن</option><option>سوريا</option><option>لبنان</option><option>السودان</option>
+<option>المغرب</option><option>تونس</option><option>أخرى</option>
+</select>
+<label>رقم الهوية / الإقامة *</label>
+<input type="text" name="idNumber" required>
+<label>تاريخ الميلاد *</label>
+<input type="date" name="birthDate" required>
+<label>مكان الميلاد (المدينة)</label>
+<input type="text" name="birthPlace">
+<label>المدينة *</label>
+<input type="text" name="city" required>
+<label>العنوان بالتفصيل *</label>
+<textarea name="address" required placeholder="شارع - حي - رمز بريدي (إن وُجد)"></textarea>
+<label>رقم الجوال (واتساب) *</label>
+<input type="tel" name="phone" required>
+<label>البريد الإلكتروني *</label>
+<input type="email" name="email" required>
+</div>
+<div>
+<label>نوع المؤهل السابق *</label>
+<select name="prevDegree" required>
+<option value="">اختر...</option><option>ثانوي</option><option>دبلوم</option><option>بكالوريوس</option><option>ماجستير</option>
+</select>
+<label>سنة التخرج *</label>
+<input type="number" name="gradYear" min="1900" max="2100" required>
+<label>اسم المدرسة / الجامعة السابقة</label>
+<input type="text" name="prevInstitute">
+<label>النسبة / المعدل</label>
+<input type="text" name="gpa">
+<label>التخصص المطلوب *</label>
+<input type="text" name="desiredMajor" required>
+<label>نوع الدراسة *</label>
+<select name="studyType" required>
+<option value="">اختر...</option><option>انتظام</option><option>انتساب</option><option>تعليم عن بعد</option>
+</select>
+<label>الكلية / القسم *</label>
+<select name="faculty" required>
+<option value="">اختر الكلية</option>
+<option>كلية الطب</option><option>كلية الهندسة</option><option>كلية العلوم</option>
+<option>كلية الآداب</option><option>كلية إدارة الأعمال</option>
+<option>كلية الحاسبات وتقنية المعلومات</option><option>كلية التربية</option>
+<option>كلية القانون</option><option>كلية الصحة العامة</option>
+</select>
+<label>حالة طبية هامة (إن وُجد)</label>
+<input type="text" name="medicalInfo" placeholder="اكتب إذا كان هناك أمر طبي مهم">
+<div class="section-title">جهة الاتصال في حالات الطوارئ</div>
+<label>اسم جهة الاتصال للطوارئ</label>
+<input type="text" name="emergencyName" placeholder="اسم قريب أو شخص">
+<label>صلة القرابة</label>
+<input type="text" name="emergencyRelation" placeholder="أم/ أب/ أخ/ صديق ...">
+<label>رقم الطوارئ</label>
+<input type="tel" name="emergencyPhone" placeholder="رقم جوال للطوارئ">
+</div>
+</div>
 
-      <div class="section-title">جهة الاتصال في حالات الطوارئ</div>
-      <label>اسم جهة الاتصال للطوارئ</label>
-      <input type="text" name="emergencyName" placeholder="اسم قريب أو شخص">
-      <label>صلة القرابة</label>
-      <input type="text" name="emergencyRelation" placeholder="أم/ أب/ أخ/ صديق ...">
-      <label>رقم الطوارئ</label>
-      <input type="tel" name="emergencyPhone" placeholder="رقم جوال للطوارئ">
-    </div>
-  </div>
+<div class="section-title">المرفقات المطلوبة</div>
+<div class="files-row">
+<div>
+<label>صورة الهوية / الإقامة *</label>
+<input type="file" name="fileId" accept="image/*,application/pdf" required>
+</div>
+<div>
+<label>صورة الشهادة / المؤهل *</label>
+<input type="file" name="fileCertificate" accept="image/*,application/pdf" required>
+</div>
+<div>
+<label>صورة شخصية *</label>
+<input type="file" name="filePhoto" accept="image/*" required>
+</div>
+<div>
+<label>إيصال الدفع (إن وُجد)</label>
+<input type="file" name="fileReceipt" accept="image/*,application/pdf">
+</div>
+</div>
 
-  <!-- الملفات -->
-  <div style="margin-top:18px">
-    <div class="section-title">المرفقات المطلوبة</div>
-    <div class="files-row" style="margin-top:8px;">
-      <div>
-        <label>صورة الهوية / الإقامة *</label>
-        <input type="file" name="fileId" accept="image/*,application/pdf" required>
-      </div>
-      <div>
-        <label>صورة الشهادة / المؤهل *</label>
-        <input type="file" name="fileCertificate" accept="image/*,application/pdf" required>
-      </div>
-    </div>
+<div class="account-section">
+<div class="account-left">
+<div>
+<div style="font-size:13px;color:#666">لتحويل الرسوم استخدمي:</div>
+<div style="font-weight:800;color:var(--uf-green);">SA1980000857608010276380</div>
+<div class="bank-name">بنك الأهلي السعودي</div>
+</div>
+</div>
+<div style="display:flex;align-items:center;gap:12px">
+<div class="fees">رسوم التسجيل: 1200 ريال</div>
+<button type="button" class="copy-btn" id="copyAccountBtn">نسخ رقم الحساب</button>
+</div>
+</div>
 
-    <div class="files-row" style="margin-top:12px;">
-      <div>
-        <label>صورة شخصية (مقاس - واضح) *</label>
-        <input type="file" name="filePhoto" accept="image/*" required>
-      </div>
-      <div>
-        <label>إيصال الدفع (إن وُجد)</label>
-        <input type="file" name="fileReceipt" accept="image/*,application/pdf">
-      </div>
-    </div>
-  </div>
+<div>
+<label><input type="checkbox" name="agree" required> أقرّ بأن جميع البيانات المدخلة صحيحة ومطابقة للوثائق الرسمية.</label>
+</div>
 
-  <!-- الحساب والنسخ -->
-  <div class="account-section" style="margin-top:18px">
-    <div class="account-left">
-      <div>
-        <div style="font-size:13px;color:#666">لتحويل الرسوم استخدمي:</div>
-        <div style="font-weight:800;color:var(--uf-green);">SA1980000857608010276380</div>
-        <div style="font-size:13px;color:#444" class="bank-name">بنك الأهلي السعودي</div>
-      </div>
-    </div>
-
-    <div style="display:flex;align-items:center;gap:12px">
-      <div class="fees">رسوم التسجيل: 1200 ريال</div>
-      <button type="button" class="copy-btn" id="copyAccountBtn">نسخ رقم الحساب</button>
-    </div>
-  </div>
-
-  <div style="margin-top:16px">
-    <label><input type="checkbox" name="agree" required> أقرّ بأن جميع البيانات المدخلة صحيحة ومطابقة للوثائق الرسمية.</label>
-  </div>
-
-  <div class="submit-area">
-    <button type="submit" class="btn">إرسال الطلب</button>
-    <button type="reset" class="btn cancel">إلغاء</button>
-  </div>
-
-  <div class="note">جميع الحقوق محفوظة © جامعة الملك فيصل</div>
+<div class="submit-area">
+<button type="submit" class="btn">إرسال الطلب</button>
+<button type="reset" class="btn cancel">إلغاء</button>
+</div>
+<div class="note">جميع الحقوق محفوظة © جامعة الملك فيصل</div>
 </form>
 </div>
 
 <script>
-  // Copy account button behavior
-  document.getElementById('copyAccountBtn').addEventListener('click', function(){
-    const text = 'SA1980000857608010276380 - بنك الأهلي السعودي';
-    if(navigator.clipboard && navigator.clipboard.writeText){
-      navigator.clipboard.writeText(text).then(()=> {
-        alert('✅ تم نسخ رقم الحساب: ' + text);
-      }).catch(()=> {
-        prompt('انسخ رقم الحساب يدوياً:', text);
-      });
-    }else{
-      prompt('انسخ رقم الحساب يدوياً:', text);
-    }
-  });
+const formContainer = document.getElementById('registrationForm');
+const showFormBtn = document.getElementById('showFormBtn');
 
-  // Form submit using Formspree
-  document.getElementById('registrationForm').addEventListener('submit', function(e){
-    e.preventDefault();
-    const fd = new FormData(this);
+showFormBtn.addEventListener('click', ()=> formContainer.style.display='block');
 
-    fetch(this.action, {
-      method: 'POST',
-      body: fd,
-      headers: { 'Accept': 'application/json' }
-    })
-    .then(response => {
-      if (response.ok) {
-        alert('✅ تم إرسال الطلب بنجاح، ستصلك رسالة تأكيد على بريدك الإلكتروني.');
-        this.reset();
-      } else {
-        alert('⚠️ لم يتم إرسال الطلب، تحقق من الاتصال أو إعداد Formspree.');
-      }
-    })
-    .catch(err => {
-      console.error(err);
-      alert('حدث خطأ أثناء الإرسال، حاول/حاولي مرة أخرى لاحقًا.');
-    });
-  });
-
-  // ربط النموذج بالزر الموجود في موقعك
-  // الزر في موقعك يجب أن يكون مثل:
-  // <a href="#" class="quick-link" onclick="showForm()">تقديم طلب جديد</a>
-  function showForm(){
-    const formWrap = document.getElementById('registrationForm');
-    formWrap.style.display = 'block';
-    formWrap.scrollIntoView({ behavior: 'smooth' });
+document.addEventListener('click', (e)=>{
+  if(!formContainer.contains(e.target) && e.target!==showFormBtn){
+    formContainer.style.display='none';
   }
+});
+
+document.getElementById('copyAccountBtn').addEventListener('click', ()=>{
+  const text = 'SA1980000857608010276380 - بنك الأهلي السعودي';
+  navigator.clipboard.writeText(text).then(()=>alert('✅ تم نسخ رقم الحساب: ' + text));
+});
 </script>
 
 </body>
-    </html>
+</html>
 </body>
 </html>
 
